# python-cmake-wheel

./: .gitignore  Dockerfile  Dockerfile.template  LICENSE  README.md  change-wheel-tag-macos.py  deploy.bash  python-wheel-globals.cmake  python-wheel.cmake  python.bash  repair-wheel-macos.bash  setup.py.in  test-wheel.bash
.github/workflows/: test.yml
tests/macos-wheel-test/: CMakeLists.txt  LICENSE  py_simple.cpp  simple_lib.cpp  simple_lib.h  test_wheel.py
tests/transitive-deps-test/: CMakeLists.txt  LICENSE  README.md  lib_a.cpp  lib_a.h  lib_b.cpp  lib_b.h  py_transitive.cpp  test_wheel.py
